edge-orch/state-aggregator/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: state-aggregator
  labels:
    app: state-aggregator
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: state-aggregator
  template:
    metadata:
      labels:
        app: state-aggregator
    spec:
      serviceAccountName: state-aggregator
      nodeSelector:
        kubernetes.io/hostname: etri-ser0001-cg0msb
      containers:
        - name: state-aggregator
          image: 192.168.0.56:5000/state-aggregator@sha256:712782e162aca26a41e7b2c53b58c137c77e7c70621b6bbba1cc7af85129ef28
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: state-data
              mountPath: /app/data
      volumes:
        - name: state-data
          persistentVolumeClaim:
            claimName: state-aggregator-state
---
apiVersion: v1
kind: Service
metadata:
  name: state-aggregator
  labels:
    app: state-aggregator
spec:
  selector:
    app: state-aggregator
  ports:
    - name: http
      port: 8000
      targetPort: 8000
